apps/linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
  namespace: linkding
spec:
  ingressClassName: traefik
  rules:
    - host: linkding.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port: { number: 9090 }
